style.css
/*/ Base /*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

li {
    list-style: none;
}

html, body {
    width: 100%;
    height: 100%;
}

.bold {
    font-weight: bold;
}

.hidden {
    opacity: 0;
}

/*/ html /*/

html {
    font-family: Inter;
    overflow: hidden;

    /* Interface */
    --z-footer: 20;
    --z-navigation: 10;
    --z-header: 20;
    --z-image-preview: 30;
    // FIXME: Article is overlapped by Shortcuts.
}

/*/ body /*/

body {
    display: grid;
    grid-template-areas:
        "aside history   settings"
        "aside article   settings"
        "aside shortcuts settings";
    grid-template-rows: auto 1fr auto;
    grid-template-columns: var(--aside-width) 1fr var(--aside-width);
    background: var(--body-background);
    border: var(--global-border-size) solid var(--global-border-color);
}

/*/ Sidebar /*/

aside {
    font-family: Trash;
    display: flex;
    justify-content: space-between;
    padding: var(--main-padding) 0;
    color: var(--dark);
    grid-area: aside;
    writing-mode: tb;
    transform: rotate(180deg);
    font-size: 30px;
    line-height: calc(var(--aside-width) + 0.215em);
    white-space: nowrap;
    border-left: var(--global-border-size) solid var(--global-border-color);
    overflow: hidden;
    box-sizing: content-box;
    background: var(--aside-background);
}

.clock {
    font-weight: normal;
}

/*/ History /*/

header {
    position: relative;
    grid-area: history;
    display: flex;
    overflow: hidden;
    padding: var(--main-padding);
    padding-bottom: 0;
    z-index: var(--z-header);
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
}

.history {
    display: flex;
    font-size: 30px;
    color: var(--history-base);
}

.history::after {
    /* This ensures that the header will have a height even before
       the first entry is being pushed. */
    content: "*";
    opacity: 0;
}

.history li {
    cursor: pointer;
    white-space: nowrap;
}

.history li::after {
    /* color: var(--history-base); */
    content: " <-";
    white-space: pre;
    margin-right: -0.3ex;
}

.history li[data-chain="start"]::after {
    content: " ⁂ ";
    margin-right: 1ex;
}

.history li span,
.history::after {
    pointer-events: none;
    position: relative;
    display: inline-block;
    box-shadow: inset 0 0 0 2px var(--history-base);
    border-radius: var(--ui-button-border-radius);
    padding: .25ex .9ex;
}

.history li:first-of-type span,
.history li:hover span {
    background: var(--history-base);
    color: var(--history-contrast);
}

/*/ Article Area /*/

#articleBleedBox {
    grid-area: article;
    padding: calc(var(--main-padding) + var(--lap));
}

#articleCropBox {
    position: relative;
    height: 100%;
}

#articleInput {
    position: absolute;
    pointer-events: none;
    left: var(--k-article-token-x);
    top: var(--k-article-token-y);
    font: inherit;
    border: 0;
    background: none;
    color: transparent;
    z-index: 100000;
    caret-color: var(--article-caret-color);
    /* Makes the carret visible on an empty node */
    min-width: 1px;
}

#articleInput:focus {
    outline: none;
}

/*/ Navigation /*/

nav {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    align-items: center;
    justify-content: center;
    --option-height: 60px;
    --option-font-size: 32px;
    z-index: var(--z-navigation);
    display: flex;
    opacity: 0;
    transition: opacity 125ms ease-in-out;
}

nav[data-is-visible=true] {
    opacity: 1;
}

#navSelect {
    max-width: 500px;
}

.navOption {
    margin-top: 1.5ex;
    display: flex;
}

.navOption:first-child {
    margin-top: 0;
}

[data-navOptionIdx] {
    width: var(--option-height);
    height: var(--option-height);
    background: var(--upcoming-option-background);
    color: var(--upcoming-option-color);
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: var(--option-font-size);
    border-radius: var(--option-height);
    border-bottom-right-radius: 0;
    flex-shrink: 0;
    box-shadow: 5px 5px 0 0 var(--dark);
}

[data-navOptionIdx="0"]::before { content: ""; }
[data-navOptionIdx="1"]::before { content: "➀"; }
[data-navOptionIdx="2"]::before { content: "➁"; }
[data-navOptionIdx="3"]::before { content: ""; }
[data-is-available="false"] [data-navOptionIdx]::before { content: ""; }

.navOptionTitle {
    height: var(--option-height);
    font-size: var(--option-font-size);
    background: var(--upcoming-option-background);
    color: var(--upcoming-option-color);
    display: flex;
    align-items: center;
    padding: 0 1.5ex;
    border-radius: var(--option-height);
    border-bottom-left-radius: 0;
    white-space: nowrap;
    box-shadow: 5px 5px 0 0 var(--dark);
}

[data-is-available="false"] .navOptionTitle:empty::before {
    content: "L̷͇̇ő̷͓a̴̗͑d̷̲͌i̷͉͛n̶͚̈g̸͓̽…̴̯̂";
}

.grid {
    position: fixed;
    top: 0;
    left: 54px;
    right: 2px;
    bottom: 0;
    pointer-events: none;
}

/*/ Loading Spinner /*/

#loadingSpinner {
    display: flex;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    align-items: center;
    justify-content: center;
    font-size: 2rem;
    color: var(--article-loading-spinner-color);
}

/*/ Article Frame /*/

#articleFrame {
    position: absolute;
    top: calc(-1 * var(--lap));
    left: calc(-1 * var(--lap));
    width: calc(var(--article-frame-width) + var(--lap) * 2);
    height: calc(var(--article-frame-height) + var(--lap) * 2);
    background: var(--article-frame-background);
    transition: all 512ms ease-out;
}

/*/ Article /*/

#article {
    position: absolute;
    transition: left 512ms ease-out, top 512ms ease-out,
                width 512ms ease-out, height 512ms ease-out;
}

#articleContentWrapper {
    position: absolute;
    top: 0; right: 0;
    bottom: 0; left: 0;
    overflow: hidden;
}

#articleThumbnail[src="data:,"],
#articleImage[src="data:,"] {
    display: none;
}

#articleThumbnail {
    margin-top: 20px;
    border: var(--article-thumbnail-border);
    /* FIXME: Use variable for thumbnail size. */
    max-height: 200px;
    max-width: 200px;
    mix-blend-mode: var(--article-thumbnail-mix-blend-mode);
    filter: var(--article-thumbnail-filter);
}

#articleImage {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 95vh;
    width: 95vw;
    object-fit: contain;
    max-height: var(--original-height);
    max-width: var(--original-width);
    z-index: var(--z-image-preview);
    border: none;
}

.token {
    display: inline-block;
    position: relative;
    white-space: pre-wrap;
    color: var(--token-upcoming-color);
    background: var(--token-upcoming-background);
}

#activeToken {
    color: var(--token-active-color);
    background: var(--token-active-background);
    z-index: 1;
}

#activeToken #progressToken {
    color: var(--token-progress-color);
    background: var(--token-progress-background);
    text-shadow: var(--token-progress-text-shadow);
    position: absolute;
    right: 0;
}

#activeToken #progressToken::before {
    content: attr(data-upcoming);
}

#activeToken #progressToken::after {
    color: var(--token-error-color);
    background: var(--token-error-background);
    content: attr(data-mistyped);
    position: absolute;
    left: 0;
    top: 0;
    white-space: nowrap;
    white-space: pre;
}

#articleExtract, #articleInput {
    font: var(--article-extract-font);
    font-feature-settings: var(--article-extract-font-feature-settings);
    letter-spacing: var(--article-extract-letter-spacing);
}

.typedToken {
    position: relative;
    color: var(--token-typed-color);
    background: var(--token-typed-background);
}

.token::before {
    content: attr(data-word);
}

.footer-image {
    --timing: 500ms;
    --footer-image-max-size: 200px;
    position: absolute;
    mix-blend-mode: var(--aside-thumbnail-mix-blend-mode);
    filter: var(--aside-thumbnail-filter);
    max-height: var(--footer-image-max-size);
    max-width: var(--footer-image-max-size);
    transform-origin: center;
    /* FIXME: Animating transform will prevent the animation of mix-blend-mode. */
    transition: all var(--timing) ease-in-out;
}

/************************/
/*** FOOTER/SHORTCUTS ***/
/************************/
footer {
    grid-area: shortcuts;
    z-index: var(--z-footer);
    display: flex;
    justify-content: center;
    overflow: hidden;
}

#shortcuts {
    display: inline-flex;
    justify-content: center;
    background: var(--bright);
    padding: 2ex 3ex;
    font-size: 14px;
    color: var(--dark);
    border-radius: var(--ui-button-border-radius);
}

#shortcuts div {
    white-space: nowrap;
    display: flex;
    align-items: center;
    flex-direction: row;
}

#shortcuts div:not(:last-child)::after {
    content: ";";
    padding: 0 2ex;
    opacity: .4;
}

#shortcuts dt {
    padding-right: 1ex;
    font-weight: bold;
    display: flex;
    grid-gap: 1px;
}

#shortcuts b {
    display: flex;
    width: 20px;
    height: 20px;
    border-radius: 3px;
    background: var(--dark);
    color: var(--bright);
    font-size: 12px;
    align-items: center;
    justify-content: center;
}

#shortcuts b.extended {
    width: 30px;
}

/****************/
/*** SETTINGS ***/
/****************/
#settingsWrapper {
    /* FIXME: The settings Wrapper does overlay the outer border. */
    --settings-wrapper-width: min(40vw, 550px);

    grid-area: settings;
    background: var(--aside-background);
    width: var(--aside-width);
    flex-shrink: 0;
}

#settingsWrapperInner {
    background: var(--aside-background);
    color: var(--dark);
    position: relative;
    left: 0;
    display: flex;
    transition: left 500ms ease,
                box-shadow 500ms ease;
    width: calc(var(--aside-width) + var(--settings-wrapper-width));
    z-index: 10000;
    /* left: -var(--settings-wrapper-width); */
}

#settingsWrapper:hover #settingsWrapperInner {
    box-shadow: 0 0 100px 10px var(--dark);
    left: calc(-1 * var(--settings-wrapper-width));
    transition: left 500ms ease,
                box-shadow 500ms ease,
                background 256ms ease;
}

#settingsStatusBar {
    writing-mode: vertical-lr;
    height: 100%;
    font-size: 30px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: var(--main-padding) 0;
    font-family: Trash;
    line-height: calc(var(--aside-width) + 0.215em);
    width: var(--aside-width);
    pointer-events: none;
}

#settingsStatus {
    text-transform: uppercase;
}

#settings {
    width: var(--settings-wrapper-width);
    height: 100vh;
    padding: calc(var(--main-padding) * 2);
    color: var(--dark);
    font-size: 26px;
    line-height: 1.4em;
    overflow-y: auto;
    cursor: default;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    border-left: 1px solid var(--dark);
}

#settings .settingsOption {
    background: var(--dark);
    color: var(--bright);
    border-radius: 100px;
    padding: .1ex .8ex;
    cursor: pointer;
    display: inline;
}

#settings .settingsOption::before {
    font-size: .725em;
    position: relative;
    bottom: .1em;
    margin-left: -.1375em;
    margin-right: .25em;
}

#settings p:not(:last-child) {
    margin-bottom: 1em;
}

[data-type="checkbox"] .settingsOption::before {
    content: "◇";
}
[data-type="checkbox"] .settingsOption[data-is-selected="true"]::before {
    content: "◆";
}
[data-type="radio"] .settingsOption::before {
    content: "○";
}
[data-type="radio"] .settingsOption[data-is-selected="true"]::before {
    content: "●";
}

